applications/crossplane/overlays/homelab/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crossplane-ui
  namespace: crossplane-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - crossplane.homelab.kszpakowski.com
      secretName: crossplane-ui-cert
  rules:
    - host: "crossplane.homelab.kszpakowski.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webui
                port:
                  number: 80
